5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3986/executions/1672_1949.log
== TEST (2019-05-17 09:22:00) 
-- CODE:
na=int(input("numero apostado de dois digitos:"))
ns=int(input("numero sorteado de dois digitos:"))
a1=na//10
a2=na%10
s1=ns//10
s2=ns%10
if a1=s1 and a2=s2:
	print("Ganhou R$ 100.000,00")
elif a1=s2 and a2=s1:
	print("Ganhou R$ 50.000,00")
elif a1=s1 or a1=s2 or a2=s1 or a2=s2:
	print("Ganhou R$ 1.000,00")
else:
	print("Perdeu")
-- ERROR:
File "XXXX", line 7
    if a1=s1 and a2=s2:
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 09:22:43) 
-- CODE:
na=int(input("numero apostado de dois digitos:"))
ns=int(input("numero sorteado de dois digitos:"))
a1=na//10
a2=na%10
s1=ns//10
s2=ns%10
if a1==s1 and a2==s2:
	print("Ganhou R$ 100.000,00")
elif a1==s2 and a2==s1:
	print("Ganhou R$ 50.000,00")
elif a1==s1 or a1==s2 or a2==s1 or a2==s2:
	print("Ganhou R$ 1.000,00")
else:
	print("Perdeu")
-- OUTPUT:
Ganhou R$ 100.000,00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-17 09:22:54) 
-- CODE:
na=int(input("numero apostado de dois digitos:"))
ns=int(input("numero sorteado de dois digitos:"))
a1=na//10
a2=na%10
s1=ns//10
s2=ns%10
if a1==s1 and a2==s2:
	print("Ganhou R$ 100.000,00")
elif a1==s2 and a2==s1:
	print("Ganhou R$ 50.000,00")
elif a1==s1 or a1==s2 or a2==s1 or a2==s2:
	print("Ganhou R$ 1.000,00")
else:
	print("Perdeu")
-- EXECUTION TIME:
0.284648
-- TEST CASE 1:
---- input:
55
55
---- correct output:
Ganhou R$ 100.000,00
---- user output:
Ganhou R$ 100.000,00
-- TEST CASE 2:
---- input:
78
89
---- correct output:
Ganhou R$ 1.000,00
---- user output:
Ganhou R$ 1.000,00
-- TEST CASE 3:
---- input:
12
56
---- correct output:
Perdeu
---- user output:
Perdeu
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
